chore: prevent icons from stretching on firefox

--- a/src/patterns/FavoritesCollectionTile/_favoritesCollectionTile.scss
+++ b/src/patterns/FavoritesCollectionTile/_favoritesCollectionTile.scss
@@ -147,8 +147,7 @@
   }
 
   &__icon {
-    grid-column: 1;
-    justify-self: start;
+    justify-content: flex-start;
     pointer-events: none;
 
     &-rotate {
@@ -158,7 +157,9 @@
     &-circle {
       border: 2px solid $dark-gray;
       border-radius: 50%;
-      transform: scale(0.846);
+      height: 1.5rem;
+      justify-content: flex-start;
+      width: 1.5rem;
     }
   }
 
